--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'com.android.support:design:25.0.0'
+    compile('com.mikepenz:fastadapter:1.5.2@aar') {
+        transitive = true
+    }
+    compile 'com.mikepenz:fastadapter-extensions:1.5.1@aar'
 }
